--- a/sun.html
+++ b/sun.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sun is burning</title>
+    <img src="meo.jpg" alt="">
 </head>
 <body>
     <h2>hello hi</h2>
